Fix whitespace under about page. Also add some margin between name and address.

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -8,7 +8,7 @@
         margin-bottom: 25px;
     }
     h2 {
-        margin-bottom: 0;
+        margin-bottom: 10px;
     }
     #intro {
         padding: 0 25px;
